# PulseDopplerRadarSimulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot_results.py
docs/: MATH_EXPLAINED.md
include/: Benchmark.h  CFARDetector.h  FFTProcessor.h  KalmanTracker.h  NoiseModel.h  RadarConfig.h  ScenarioGenerator.h  SignalGenerator.h  Types.h  Visualizer.h
src/: Benchmark.cpp  CFARDetector.cpp  FFTProcessor.cpp  KalmanTracker.cpp  NoiseModel.cpp  ScenarioGenerator.cpp  SignalGenerator.cpp  Visualizer.cpp
